--- a/CNN/CNN_Image_Preprocessing.ipynb
+++ b/CNN/CNN_Image_Preprocessing.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Image Preprocessing\n",
+    "\n",
+    "In this notebook a set of input images are transformed in various ways in order to increase the robustness of the model.\n",
+    "The following transforms are made:\n",
+    "1. Addition of Image noise, this is done by adding some random noise from one of three background images (locations where shoes might be pictured)\n",
+    "2. Image Rotation; Images are rotatated 3 times with different background noise added on each rotation.\n",
+    "3. Image Scaling; Images are scaled, again with different background noise added."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -16,17 +29,6 @@
     "import random as rand\n",
     "import cv2\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this notebook a set of input images are transformed in various ways in order to increase the robustness of the model.\n",
-    "The following transforms are made:\n",
-    "1. Addition of Image noise, this is done by adding some random noise from one of three background images (locations where shoes might be pictured)\n",
-    "2. Image Rotation; Images are rotatated 3 times with different background noise added on each rotation.\n",
-    "3. Image Scaling; Images are scaled, again with different background noise added."
    ]
   },
   {
@@ -731,23 +733,14 @@
     "with file('y_Data_Large_2.npy', 'w') as youtfile:    \n",
     "    np.save(youtfile,out_y)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [img_pro]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [img_pro]"
   },
   "language_info": {
    "codemirror_mode": {
